--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,9 @@ AMI_ID*
 SG_ID
 AGENT_CMD
 SSH_*
-WORKER_COUNT
+AGENT_COUNT
 SERVER_COUNT
-WORKER_SIZE
+AGENT_SIZE
 SERVER_SIZE
 *.pem
 listinstances
